--- a/views/client/mainpage.ejs
+++ b/views/client/mainpage.ejs
@@ -410,6 +410,10 @@
             margin-top: auto;
         }
 
+        .login-btn{
+            margin-top: 20px;
+        }
+
         /* ===== CRITICAL RESPONSIVE FIXES ===== */
 
         /* Fix navbar issues for all responsive sizes */
