--- a/views/partials/clientnavbar.ejs
+++ b/views/partials/clientnavbar.ejs
@@ -356,8 +356,6 @@
                 padding: 10px 12px;
             }
         }
-
-        
     </style>
 </head>
 
@@ -388,7 +386,9 @@
                     </div>
                 </div>
                 <% } else { %>
-                    <a href="/login"><i class="fa-solid fa-circle-user"></i> Login</a>
+                    <div class="login-btn">
+                        <a href="/login"><i class="fa-solid fa-circle-user"></i> Login</a>
+                    </div>
                     <% } %>
         </div>
     </div>
